--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -7,6 +7,10 @@
         Create
       </a>
     </h1>
+  
+    {% block search %}
+        {% include "includes/search.html" %}
+    {% endblock %}
 
     {% if driver_list %}
     <table class="table">
